# devlauncher

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: auto-discovery.md  mcp-server.md  releasing.md
docs/superpowers/plans/: 2026-03-21-auto-install.md  2026-03-25-interactive-keypress.md
docs/superpowers/specs/: 2026-03-22-readme-design.md
src/devlauncher/: cli.py  config.py  discovery.py  installer.py  keyboard.py  mcp_server.py  migration.py  ports.py  runner.py  status_file.py
src/devmux/: cli.py  config.py  discovery.py  installer.py  runner.py
src/devmux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli_init.py  test_cli_restart_loop.py  test_config.py  test_discovery_install.py  test_discovery_multi.py  test_installer.py  test_mcp_server.py  test_migration.py  test_runner_interactive.py  test_runner_log_writing.py  test_status_file.py
