[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devmux"
version = "0.1.0"
description = "Start all your dev services with one command"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Ayush Jhunjhunwala", email = "ayushjhun13@gmail.com" }
]
keywords = ["dev", "services", "runner", "process", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = [
  "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/the-non-expert/devmux"
Repository = "https://github.com/the-non-expert/devmux"
"Bug Tracker" = "https://github.com/the-non-expert/devmux/issues"

[project.scripts]
devmux = "devmux.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
