[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devlauncher"
version = "0.2.0"
description = "Start all your dev services with one command"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ayush Jhunjhunwala", email = "ayushjhun13@gmail.com" }
]
keywords = ["dev", "services", "runner", "process", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = [
  "tomli; python_version < '3.11'",
  "mcp",
]

[project.urls]
Homepage = "https://github.com/the-non-expert/devlauncher"
Repository = "https://github.com/the-non-expert/devlauncher"
"Bug Tracker" = "https://github.com/the-non-expert/devlauncher/issues"

[project.scripts]
devlauncher = "devlauncher.cli:main"
devlauncher-mcp = "devlauncher.mcp_server:run"

[tool.setuptools.packages.find]
where = ["src"]
